# routine-http

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
examples/: CMakeLists.txt  example1.cpp
include/: request_handler.hpp  scheduler.hpp  thread_pool.hpp
include/http/: body_storage.hpp  headers.hpp  params.hpp  request.hpp  response.hpp  route_handler.hpp  types.hpp
include/net/: acceptor.hpp  http_session.hpp
include/utils/: benchmark.hpp  loggable_object.hpp  utils.hpp
source/: scheduler.cpp  thread_pool.cpp
source/http/: body_storage.cpp  headers.cpp  request.cpp  response.cpp
source/net/: http_session.cpp
